--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,40 +1,57 @@
-name: GitHub Snake Game
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
+name: Generate Snake
+permissions: 
+  contents: write
+
+# Controls when the action will run. This action runs every 6 hours.
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+      # every 6 hours
+    - cron: "0 */6 * * *"
+
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
-  push:
-    branches:
-      - main
 
+# The sequence of runs in this workflow:
 jobs:
-  generate:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Create dist directory
-        run: mkdir -p dist
-
-      - name: Generate Snake
-        uses: Platane/snk@v3
-        id: snake-gif
+    
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v2
+      
+    # Generates the snake  
+      - uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
+          github_user_name: vikramsingh-786
+          outputs:
             dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          # gif_out_path: dist/github-contribution-grid-snake.gif
+          # svg_out_path: dist/github-contribution-grid-snake.svg
+          
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
+          
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: output
-          force_orphan: true
-          commit_message: "Update snake animation [skip ci]"
+          branch: master
+          force: true
+          
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # the output branch we mentioned above
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
